<resources>
    <string name="app_name">ServerHealth</string>
    <string name="user_login">USER LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="verify_code">"Enter the verification code sent to your e-mail address."</string>
    <string name="verify_button">CONTINUE</string>
    <string name="verification">VERIFICATION</string>
    <string name="notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="favourite">Favourites</string>
    <string name="refresh">Refresh</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_date_time">Data Date Tİme</string>
    <string name="hearbeat_status">Hearbeat Status</string>
    <string name="cpu_usage">CPU Usage</string>
    <string name="temperature_status">Temperature Status</string>
    <string name="ram_usage">RAM Usage</string>
    <string name="ambient_temperature_status">Ambient Temperature Status</string>
    <string name="storage_usage">Storage Usage</string>
    <string name="energy_usage">Energy Usage</string>


</resources>